--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
 before_script:
   - $MY_CXX --version
   - make CC="$MY_CXX" CFLAGS="$GLOBAL_CFLAGS $CFLAGS" -j4
+  - wget http://download.geofabrik.de/europe/luxembourg-latest.osm.pbf
 
 script:
   - bin/test_bit_vector
@@ -33,3 +34,4 @@ script:
   - bin/test_protobuf
   - bin/test_sort
   - bin/test_tag_map
+  - bin/test_basic_features luxembourg-latest.osm.pbf
