trying to get openmp clang and travis to work together

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,16 +25,17 @@ matrix:
             - llvm-toolchain-trusty-5.0
           packages:
             - clang-5.0
+            - libomp-dev
       env: MY_CXX="clang++-5.0" CFLAGS="-O3"
     - os: linux
       addons: *clang5
-      env: MY_CXX="g++" CFLAGS="-O3 -march=native -ffast-math"
+      env: MY_CXX="clang++-5.0" CFLAGS="-O3 -march=native -ffast-math"
     - os: linux
       addons: *clang5
-      env: MY_CXX="g++" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG"
+      env: MY_CXX="clang++-5.0" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG"
     - os: linux
       addons: *clang5
-      env: MY_CXX="g++" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG -DROUTING_KIT_NO_GCC_EXTENSIONS -DROUTING_KIT_NO_POSIX"
+      env: MY_CXX="clang++-5.0" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG -DROUTING_KIT_NO_GCC_EXTENSIONS -DROUTING_KIT_NO_POSIX"
 
 before_script:
   - $MY_CXX --version
