--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
 
 before_script:
   - $MY_CXX --version
-  - make CC="$MY_CXX" CFLAGS="$GLOBAL_CFLAGS $CFLAGS" -j2
+  - make CC="$MY_CXX" CFLAGS="$GLOBAL_CFLAGS $CFLAGS" OMP_LDFLAGS="$OMP_LDFLAGS" -j2
   - wget http://download.geofabrik.de/europe/luxembourg-latest.osm.pbf
   - bin/osm_extract luxembourg-latest.osm.pbf first_out head geo_distance travel_time latitude longitude
 
@@ -51,9 +51,11 @@ script:
   - bin/test_id_mapper
   - bin/test_id_set_queue
   - bin/test_inverse_vector
+  - bin/test_nearest_neighbor
   - bin/test_nested_dissection
   - bin/test_permutation
   - bin/test_protobuf
   - bin/test_sort
   - bin/test_tag_map
   - bin/test_basic_features luxembourg-latest.osm.pbf
+  - bin/test_contraction_hierarchy_extra_weight first_out head travel_time geo_distance
