--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ matrix:
   include:
     - os: linux
       env: MY_CXX="g++" OMP_LDFLAGS="-fopenmp" CFLAGS="-O3"
-    # - os: linux
-    #   env:  MY_CXX="g++" OMP_LDFLAGS="-fopenmp" CFLAGS="-O3 -march=native -ffast-math"
-    # - os: linux
-    #   env:  MY_CXX="g++" OMP_LDFLAGS="-fopenmp" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG"
-    # - os: linux
-    #   env:  MY_CXX="g++" OMP_LDFLAGS="-fopenmp" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG -DROUTING_KIT_NO_GCC_EXTENSIONS -DROUTING_KIT_NO_POSIX"
+    - os: linux
+      env:  MY_CXX="g++" OMP_LDFLAGS="-fopenmp" CFLAGS="-O3 -march=native -ffast-math"
+    - os: linux
+      env:  MY_CXX="g++" OMP_LDFLAGS="-fopenmp" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG"
+    - os: linux
+      env:  MY_CXX="g++" OMP_LDFLAGS="-fopenmp" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG -DROUTING_KIT_NO_GCC_EXTENSIONS -DROUTING_KIT_NO_POSIX"
     - os: linux
       addons: &clang5
         apt:
@@ -28,15 +28,15 @@ matrix:
             - libiomp-dev
             - libiomp5
       env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3"
-    # - os: linux
-    #   addons: *clang5
-    #   env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3 -march=native -ffast-math"
-    # - os: linux
-    #   addons: *clang5
-    #   env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG"
-    # - os: linux
-    #   addons: *clang5
-    #   env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG -DROUTING_KIT_NO_GCC_EXTENSIONS -DROUTING_KIT_NO_POSIX"
+    - os: linux
+      addons: *clang5
+      env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3 -march=native -ffast-math"
+    - os: linux
+      addons: *clang5
+      env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG"
+    - os: linux
+      addons: *clang5
+      env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG -DROUTING_KIT_NO_GCC_EXTENSIONS -DROUTING_KIT_NO_POSIX"
 
 before_script:
   - echo MY_CXX=$MY_CXX
@@ -45,8 +45,8 @@ before_script:
   - echo OMP_LDFLAGS=OMP_LDFLAGS
   - $MY_CXX --version
   - make CC="$MY_CXX" CFLAGS="$GLOBAL_CFLAGS $CFLAGS" OMP_LDFLAGS="$OMP_LDFLAGS" -j2
-  # - wget http://download.geofabrik.de/europe/luxembourg-latest.osm.pbf
-  # - bin/osm_extract luxembourg-latest.osm.pbf first_out head geo_distance travel_time latitude longitude
+  - wget http://download.geofabrik.de/europe/luxembourg-latest.osm.pbf
+  - bin/osm_extract luxembourg-latest.osm.pbf first_out head geo_distance travel_time latitude longitude
 
 script:
   - bin/test_bit_vector
@@ -61,5 +61,5 @@ script:
   - bin/test_protobuf
   - bin/test_sort
   - bin/test_tag_map
-  # - bin/test_basic_features luxembourg-latest.osm.pbf
-  # - bin/test_contraction_hierarchy_extra_weight first_out head travel_time geo_distance
+  - bin/test_basic_features luxembourg-latest.osm.pbf
+  - bin/test_contraction_hierarchy_extra_weight first_out head travel_time geo_distance
