--- a/.travis.yml
+++ b/.travis.yml
@@ -45,8 +45,7 @@ before_script:
   - echo OMP_LDFLAGS=OMP_LDFLAGS
   - $MY_CXX --version
   - make CC="$MY_CXX" CFLAGS="$GLOBAL_CFLAGS $CFLAGS" OMP_LDFLAGS="$OMP_LDFLAGS" -j2
-  - wget http://download.geofabrik.de/europe/luxembourg-latest.osm.pbf
-  - bin/osm_extract luxembourg-latest.osm.pbf first_out head geo_distance travel_time latitude longitude
+  - git clone https://github.com/RoutingKit/DataForAutomaticTests.git data
 
 script:
   - bin/test_bit_vector
@@ -61,5 +60,18 @@ script:
   - bin/test_protobuf
   - bin/test_sort
   - bin/test_tag_map
-  - bin/test_basic_features luxembourg-latest.osm.pbf
-  - bin/test_contraction_hierarchy_extra_weight first_out head travel_time geo_distance
+  - bin/test_dijkstra data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time
+  - bin/test_contraction_hierarchy_extra_weight data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_geo_distance
+  - bin/test_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_travel_time_ch data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_travel_time_length
+  - bin/test_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_geo_distance_ch data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_geo_distance_length
+  - bin/test_contraction_hierarchy_pinned_query data/tuebingen_travel_time_ch
+  - bin/test_contraction_hierarchy_pinned_query data/tuebingen_geo_distance_ch
+  - bin/test_customizable_contraction_hierarchy data/tuebingen_first_out data/tuebingen_head data/tuebingen_cch_order
+  - bin/test_customizable_contraction_hierarchy data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_cch_order
+  - bin/test_customizable_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_travel_time_length
+  - bin/test_customizable_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_geo_distance_length
+  - bin/test_customizable_contraction_hierarchy_perfect_customization data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_travel_time_length
+  - bin/test_customizable_contraction_hierarchy_perfect_customization data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_geo_distance_length
+  - bin/test_customizable_contraction_hierarchy_pinned_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_cch_order
+  - bin/test_customizable_contraction_hierarchy_pinned_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_geo_distance
+  - bin/test_basic_features data/tuebingen.pbf
