changed from Tuebingen test data to Luxembourg test data because it is smaller and thus the tests run faster

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,17 +79,17 @@ script:
   - bin/test_protobuf
   - bin/test_sort
   - bin/test_tag_map
-  - bin/test_dijkstra data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time
-  - bin/test_contraction_hierarchy_extra_weight data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_geo_distance
-  - bin/test_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_travel_time_ch data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_travel_time_length
-  - bin/test_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_geo_distance_ch data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_geo_distance_length
-  - bin/test_contraction_hierarchy_pinned_query data/tuebingen_travel_time_ch
-  - bin/test_contraction_hierarchy_pinned_query data/tuebingen_geo_distance_ch
-  - bin/test_customizable_contraction_hierarchy data/tuebingen_first_out data/tuebingen_head data/tuebingen_cch_order
-  - bin/test_customizable_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_travel_time_length
-  - bin/test_customizable_contraction_hierarchy_path_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_geo_distance_length
-  - bin/test_customizable_contraction_hierarchy_perfect_customization data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_travel_time_length
-  - bin/test_customizable_contraction_hierarchy_perfect_customization data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_cch_order data/tuebingen_source_node data/tuebingen_target_node data/tuebingen_query_reference_geo_distance_length
-  - bin/test_customizable_contraction_hierarchy_pinned_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_travel_time data/tuebingen_cch_order
-  - bin/test_customizable_contraction_hierarchy_pinned_query data/tuebingen_first_out data/tuebingen_head data/tuebingen_geo_distance data/tuebingen_cch_order
-  - bin/test_basic_features data/tuebingen.pbf
+  - bin/test_dijkstra data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time
+  - bin/test_contraction_hierarchy_extra_weight data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time data/luxembourg_geo_distance
+  - bin/test_contraction_hierarchy_path_query data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time data/luxembourg_travel_time_ch data/luxembourg_source_node data/luxembourg_target_node data/luxembourg_query_reference_travel_time_length
+  - bin/test_contraction_hierarchy_path_query data/luxembourg_first_out data/luxembourg_head data/luxembourg_geo_distance data/luxembourg_geo_distance_ch data/luxembourg_source_node data/luxembourg_target_node data/luxembourg_query_reference_geo_distance_length
+  - bin/test_contraction_hierarchy_pinned_query data/luxembourg_travel_time_ch
+  - bin/test_contraction_hierarchy_pinned_query data/luxembourg_geo_distance_ch
+  - bin/test_customizable_contraction_hierarchy data/luxembourg_first_out data/luxembourg_head data/luxembourg_cch_order
+  - bin/test_customizable_contraction_hierarchy_path_query data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time data/luxembourg_cch_order data/luxembourg_source_node data/luxembourg_target_node data/luxembourg_query_reference_travel_time_length
+  - bin/test_customizable_contraction_hierarchy_path_query data/luxembourg_first_out data/luxembourg_head data/luxembourg_geo_distance data/luxembourg_cch_order data/luxembourg_source_node data/luxembourg_target_node data/luxembourg_query_reference_geo_distance_length
+  - bin/test_customizable_contraction_hierarchy_perfect_customization data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time data/luxembourg_cch_order data/luxembourg_source_node data/luxembourg_target_node data/luxembourg_query_reference_travel_time_length
+  - bin/test_customizable_contraction_hierarchy_perfect_customization data/luxembourg_first_out data/luxembourg_head data/luxembourg_geo_distance data/luxembourg_cch_order data/luxembourg_source_node data/luxembourg_target_node data/luxembourg_query_reference_geo_distance_length
+  - bin/test_customizable_contraction_hierarchy_pinned_query data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time data/luxembourg_cch_order
+  - bin/test_customizable_contraction_hierarchy_pinned_query data/luxembourg_first_out data/luxembourg_head data/luxembourg_geo_distance data/luxembourg_cch_order
+  - bin/test_basic_features data/luxembourg.pbf
