--- a/.travis.yml
+++ b/.travis.yml
@@ -32,12 +32,12 @@ matrix:
       addons: *clang5
       env: MY_CXX="clang++-5.0" OMP_LDFLAGS="-fopenmp=libiomp5" CFLAGS="-O3 -march=native -ffast-math -DNDEBUG -fsanitize=address -fno-omit-frame-pointer" LDFLAGS="-fsanitize=address"
     # Memory Sanitizer is deactivated because it is broken in the used Clang version.
-    # The current version finds a use-of-uninitialized-value in the following simple code: 
+    # The current version finds a use-of-uninitialized-value in the following simple code:
     #
     # #include <exception>
     # #include <iostream>
     # using namespace std;
-    # 
+    #
     # int main(){
     #   std::exception_ptr p;
     #   p = nullptr;
@@ -79,6 +79,7 @@ script:
   - bin/test_protobuf
   - bin/test_sort
   - bin/test_tag_map
+  - bin/test_osm_simple data/luxembourg.pbf
   - bin/test_dijkstra data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time
   - bin/test_contraction_hierarchy_extra_weight data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time data/luxembourg_geo_distance
   - bin/test_contraction_hierarchy_path_query data/luxembourg_first_out data/luxembourg_head data/luxembourg_travel_time data/luxembourg_travel_time_ch data/luxembourg_source_node data/luxembourg_target_node data/luxembourg_query_reference_travel_time_length
